# open-blowfish

./: .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  PAPER_FEEDBACK_AND_RAG_EXPERIMENT.md  README.md  SUPPORT.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: README.md  ci-explain.yml  ci-extras.yml  ci.yml
blowfish/: requirements-datasets.txt  requirements-evaluation.txt  requirements-explain.txt  requirements-rag.txt  requirements.txt
blowfish/baselines/: __init__.py  b0_random.py  b1_top1.py  b2_score_gap.py  b3_score_entropy.py  b4_knn_distance.py  b5_knn_density.py  b6_mahalanobis.py  b7_calibrated_logistic.py  b8_gbm.py  b9_oracle.py  base.py  factory.py
blowfish/calculations/: __init__.py  calculations.py
blowfish/datasets/: __init__.py  cache.py  chunkers.py  corpora.py  download.py  embedders.py  fetchers.py  manifest.py  sweep.py  types.py
blowfish/datasets/data/: britannica_1911.json  cc_news_finance.json  chronicling_america_finance.json  fields_medalists.json  nobel_physics.json  wikinews.json
blowfish/evaluation/: __init__.py  bootstrap.py  calibration.py  distributional.py  legacy_adapter.py  metrics.py  multipletest.py  splits.py  types.py
blowfish/experiments/: __init__.py  bench_baselines.py  bench_rag.py  controls.py  harness.py  prereg.py  reports.py  sensitivity.py
blowfish/inference/: Decider.py  Scorer.py  __init__.py  decider.py  scorer.py
blowfish/ingestion/: __init__.py  chunk_embeddings.py  topic_clustering.py  vdb_indexing.py
blowfish/rag/: __init__.py  cost.py  gates.py  generator.py  harness.py  judge.py  metrics.py
blowfish/training/: __init__.py  disambiguator_training.py  queries_embeddings.py  queries_evaluation.py
blowfish/utils/: constants.py  embedding_models_factory.py  vdb_factory.py
docs/review/: ABLATION_PLAN.md  AGENTIC_REMEDIATION_SPEC.md  BASELINE_RESULTS.md  MATH_HONESTY_CHECK.md  METHODOLOGY_REVIEW.md  PERFORMANCE_REVIEW.md  PRE_PUSH_SANITY_REVIEW.md  README.md  TECHNICAL_REVIEW.md  TESTING_AND_PROFILING_PLAN.md
homology_simulation/: README.md  __init__.py  feature_bank_generator.py  homology_calculation.py  plot_homologies_correlations.py  plot_homologies_grid_scenarios.py  requirements.txt  run_homology_simulation.py  run_homology_simulation_with_projection.py  simulation_scenarios.py  utils.py
homology_simulation/homology2feature_inference/: generate_entropy_maps.py  generate_entropy_maps_fast.py  pull_tensorboard.sh  pull_tensorboard_from_s3.sh  run_analysis.py  run_generate.sh  run_train_v4_summary_local.sh  scratch_nb.ipynb  train_feature_predictor_v2.py  train_feature_predictor_v4.py  umap_cluster_explorer.py  upload_to_s3.py
homology_simulation/plotting/: __init__.py  plot_heatmaps.py  plot_homology_histograms.py  plot_kde_distributions.py  plot_scenarios_comparison.py
legal_rag_homology/: README.md  RUNS.md  __init__.py  audit_quote_misses.py  config.py  dataset.py  plot_compare_runs.py  run_build_corpus.py  run_evaluate.py  run_index.py  run_rag.py
legal_rag_homology/corpus/: build_corpus.py  chunking.py  courtlistener.py  paraphrase_grounding.py  quote_validation.py
legal_rag_homology/evaluation/: citation_parser.py
legal_rag_homology/retrieval/: base.py  bm25_retriever.py  chunk_store.py  dense_retriever.py  homology_retriever.py  hybrid_retriever.py
legal_rag_homology/tests/: test_chunking.py  test_citation_parser.py  test_courtlistener.py  test_dataset.py  test_retrievers.py
scripts/: bootstrap_corpora.py  profile_eval_pr.py
tests/baselines/: conftest.py  test_b0_random.py  test_b7_logistic.py  test_b8_gbm.py  test_b9_oracle.py  test_factory_registry.py  test_simple_baselines.py
tests/calculations/: test_epsilon_scaling.py  test_feature_order.py  test_persistence_metrics.py
tests/datasets/: conftest.py  test_chunkers.py  test_corpora_manifest.py  test_download_sha.py  test_embedders.py  test_fetchers.py  test_sweep_cache.py
tests/evaluation/: test_bootstrap.py  test_calibration.py  test_distributional.py  test_metrics.py  test_multipletest.py  test_splits.py
tests/experiments/: conftest.py  test_bench_baselines_cli.py  test_bench_rag_cli.py  test_controls.py  test_prereg_lock.py  test_sensitivity.py
tests/inference/: test_kde_probability.py  test_scorer.py
tests/ingestion/: test_vdb_indexing.py
tests/rag/: conftest.py  test_cost.py  test_gates.py  test_generator.py  test_harness.py  test_judge.py  test_metrics.py
tests/training/: test_disambiguator_training.py
(+58 files in other folders)
