[project]
name = "blowfish"
version = "0.0.1"
description = "Homology driven RAG"
authors = [
    {name = "Thomas Barillot, Alex De Castro"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (==2.2.2)",
    "python-dotenv (==1.0.1)",
    "umap-learn (==0.5.5)",
    "hdbscan (==0.8.33)",
    "faiss-cpu (==1.8.0)",
    "httpx (==0.27.0)",
    "levenshtein (==0.25.1)",
    "sentence-transformers (==2.7.0)",
    "giotto-tda (==0.6.0)",
    "numba (==0.65.1)",
    "pynndescent (==0.5.11)",
    "shap (==0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
